# deep_data_analysis

./: Notes.txt
yc_hiring_posts/: .BUILD_PLAN.md.swp  .env.example  .gitignore  .o.swp  .step17.md.swp  BUILD_PLAN.md  HOW_TO_RUN.md  Notes.txt  README.md  app.py  o  possible_qs.md  pyproject.toml  qa_app.py  requirements.txt  step17.md  step19.md  using_postgres.md
yc_hiring_posts/config/: postgres.local.env
yc_hiring_posts/data/: source_index.csv
yc_hiring_posts/data/interim/2024-05/: posts_normalized.jsonl
yc_hiring_posts/data/interim/2024-11/: posts_normalized.jsonl
yc_hiring_posts/docs/: BUILD_PLAN.md  HOW_TO_RUN.md  IMPORTANT_FIELDS.md  current_progress.md  data_sources.md  goals.md  implementation_plan.md  notes.md  possible_qs.md  postgres_local_setup.md  question_catalog.json  question_catalog.md  question_coverage.md  schema.md  source_index.md  step17.md  step19.md  step20.md  using_postgres.md
yc_hiring_posts/sql/: README.md  postgres_schema.sql
yc_hiring_posts/src/: README.md  analytics.py  cli.py  companies.py  discovery.py  explore_app.py  fetch.py  kb_router.py  materialize.py  models.py  normalize.py  parse.py  postgres_kb.py  qa_app.py  qa_layer.py  question_catalog.py  raw_schema.py  roles.py  source_index.py  storage.py  validate.py
yc_hiring_posts/src/yc_hiring_posts/: README.md  __init__.py  cli.py  discovery.py  source_index.py  storage.py
yc_hiring_posts/tests/: README.md  test_analytics.py  test_companies.py  test_fetch.py  test_kb_router.py  test_materialize.py  test_normalize.py  test_parse.py  test_postgres_kb.py  test_qa_layer.py  test_question_catalog.py  test_roles.py  test_source_index.py  test_validate.py
(+23 files in other folders)
