[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yc-hiring-posts"
version = "0.1.0"
description = "Data ingestion and analysis for YC hiring posts."
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["cli", "discovery", "fetch", "models", "source_index", "storage"]
package-dir = {"" = "src"}
