[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yc-hiring-posts"
version = "0.1.0"
description = "Data ingestion and analysis for YC hiring posts."
requires-python = ">=3.11"

[tool.setuptools]
py-modules = ["cli", "companies", "discovery", "fetch", "models", "normalize", "parse", "raw_schema", "roles", "source_index", "storage", "validate"]
package-dir = {"" = "src"}
