[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yc-hiring-posts"
version = "0.1.0"
description = "Data ingestion and analysis for YC hiring posts."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "imageio>=2.34,<3",
  "matplotlib>=3.8,<4",
  "pandas>=2.2,<3",
  "psycopg[binary]>=3.2,<4",
  "requests>=2.31,<3",
  "scikit-learn>=1.5,<2",
  "seaborn>=0.13,<1",
  "streamlit>=1.44,<2",
]

[tool.setuptools]
py-modules = ["analytics", "cli", "companies", "discovery", "explore_app", "fetch", "materialize", "models", "normalize", "parse", "postgres_kb", "raw_schema", "roles", "source_index", "storage", "validate"]
package-dir = {"" = "src"}
